--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -2,29 +2,52 @@
     border: solid 10px rgb(255, 0, 0);
 } */
 
+.formContent{
+  
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2vh;
+}
 .loginContainer{
-    /* border: solid 1px rgb(255, 0, 0); */
     width: 18vw;
     height: 50vh;
     position: relative;
-    top: -85px;
+    top: 15vh;
     display: flex;
     flex-direction: column;
 }
 .loginDiv{
-    border: solid 1px rgb(255, 0, 221);
+    border: solid 1px rgb(58, 58, 58);
     width: 100%;
     height: 42vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
+    background-color: #000000;
+    border-radius: 3px;
 }
+
+    .marginTop{
+        margin-top: 5vh;
+    }
+    .inputCreds{
+        width: 14vw;
+        height: 4vh;
+        margin: 1vh;
+        text-align: center;
+    }
+
 .space{
-    /* border: solid 1px rgb(17, 0, 255); */
     height: 2vh;
 }
 .signUp{
-    border: solid 1px rgb(0, 255, 98);
+    border: solid 1px rgb(58, 58, 58);
     width: 100%;
     height: 6vh;
+    background-color: #000000;
+    border-radius: 3px;
 }
