--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,10 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  /* align-items: flex-start; */
+  /* align-items: center; */
 }
 
 
@@ -25,4 +27,9 @@ body{
   overflow: hidden;
 }
 
+.content-div{
+  /* border: solid 1px greenyellow; */
+  height: 85vh;
+  width: 100vw;
+}
 
