--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
-.header-div{
+.footer-div{
     background-color: rgb(20, 20, 20);
     width: 100vw;
-    height: 5vh;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
