updated css, login issues, issue still with refresh when logged in

--- a/src/header/header.css
+++ b/src/header/header.css
@@ -1,8 +1,14 @@
 .header-div{
+    /* border: 1px solid greenyellow; */
     background-color: rgb(20, 20, 20);
     width: 100vw;
     height: 5vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    flex-direction: row;
+}
+
+.header-space{
+    width: 1vw;
 }
