--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 *{
   font-family: Arial, Helvetica, sans-serif;
 }
+h1, h2, h3, h4, h5, p{
+  color: aliceblue;
+}
 
 .App {
   text-align: center;
@@ -13,19 +16,23 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /* align-items: flex-start; */
-  /* align-items: center; */
 }
 
 
 body{
   /* background: url(/src/non_upload_images/instagram_login.jpg); */
   margin: 0;
-  background-color: rgb(31, 31, 31);
+  background-color: #131516f6;
   background-repeat: no-repeat;
   background-size: 100vw;
   height: 100vh;
-  overflow: hidden;
+}
+
+body {
+  overflow: scroll;
+  overflow-x: hidden;
+
+  
 }
 
 .content-div{
