--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -28,7 +28,7 @@
     align-items: center;
     flex-direction: column;
     background-color: #000000;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 
     .marginTop{
@@ -39,6 +39,10 @@
         height: 4vh;
         margin: 1vh;
         text-align: center;
+        border-radius: 10px;
+        border: solid 1px rgb(58, 58, 58);
+        background-color: #131516f6;
+        color: aliceblue;
     }
 
 .space{
@@ -49,5 +53,5 @@
     width: 100%;
     height: 6vh;
     background-color: #000000;
-    border-radius: 3px;
+    border-radius: 10px;
 }
