--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 5vh;
     
