--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,8 +1,9 @@
 .home-content{
+    /* border: solid 1px red; */
     width: 100vw;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
@@ -10,10 +11,41 @@
     
 }
 
+.home-options{
+    border: solid 1px rgb(58, 58, 58);
+    background-color: #000000;
+    width: 20vw;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 10px;
+    
+}
+
+
 .button{
+    width: 14vw;
+    height: 4vh;
+    margin: 1vh;
+    text-align: center;
+    border-radius: 10px;
+    border: solid 1px rgb(58, 58, 58);
+    background-color: #131516f6;
+    color: aliceblue;
+}
+
+/* .button{
     width: 30vw;
-    font-size: 100px;
+    font-size: 30px;
     background-color: rgb(66, 63, 63);
     border-radius: 10px;
     color: aliceblue;
+} */
+
+.spacer{
+    height: 1vh;
+    width: 10vw;
 }
